--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,11 +1,17 @@
 <main class="index">
-    <header class="masthead d-flex">
-        <div class="container text-center my-auto">
-            <h1 class="mb-1">Bienvenido a PRIMAL APPS</h1>
-            <h3 class="mb-5">
-                <em>Apps freelance</em>
-            </h3>
-            <a href="/login" class="btn btn-primary">Empezar.</a>
+    <section>
+        <div class="contenido">
+            <div class="bg__section"></div>
+            <div class="contenido-caja">
+                <h2 style="z-index: 3;" class="gs_reveal">Login<br> Test
+                </h2>
+                <h5 class="gs_reveal">by Primal</h5>
+                <div class="button-index">
+                        <a href="/login">
+                            <button type="button" class="font__Josefin">Comenzar</button>
+                        </a>
+                </div>
+            </div>
         </div>
-    </header>
+    </section>
 </main>
