--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -31,10 +31,7 @@
         </div>
     </div>
     <nav id="nav__footer" class="container border-bottom py-3 mb-3">
-        <a href="/home">Home</a>
-        <a href="#skills" onclick="toggleMenu__skills();">Skills</a>
-        <a>Contacto</a>
-        <a href="#about">Acerca de</a>
+        <a href="https://alittlechristianboy.herokuapp.com/" target="__blank">Visitar portafolio personal</a>
     </nav>
     <div>
         <div class="container">
