--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -13,9 +13,12 @@ html {
 }
 
 :root {
-    --neon-text-color: #f40;
+    --light-blue-primal: #B3C7E4;
+    --neon-text-color: #9A001E;
     --neon-border-color: #5577A8;
     --deep-blue-primal: #21477E;
+    --text-primal:#ffcc74;
+    --red-origin-button:#ff1f71;
 }
 
 .navbar {
@@ -797,7 +800,7 @@ body {
     filter: blur(10px);
 }*/
 ::-webkit-resizer {
-    background: linear-gradient(to bottom, #ffcc74, #21477E);
+    background: #151515;
 }
 
 ::-webkit-scrollbar {
@@ -807,7 +810,7 @@ body {
 
 ::-webkit-scrollbar-button {
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, .5);
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #202020;
 }
 
 ::-webkit-scrollbar-corner {
@@ -816,7 +819,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
     height: 50px;
-    background: linear-gradient(to bottom, #ffcc74, #21477E);
+    background: #202020;
     border-radius: 3px;
     filter: blur(30px);
 }
@@ -896,7 +899,7 @@ body {
     width: 50%;
     height: 100%;
     background:#fff;
-    z-index: 1000;
+    z-index: 11;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -996,4 +999,270 @@ body {
         left: 0;
         top: 150px;
     }
+}
+section:nth-child(1){
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+        background: url(https://res.cloudinary.com/primalappsje/image/upload/v1650655400/primal/pexels-miguel-%C3%A1-padri%C3%B1%C3%A1n-2882566_djmftn.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+.bg__section{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.4);
+    
+}
+.contenido{
+    max-width: 600px;
+}
+.contenido .contenido-caja h2{
+    position: relative;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 85px;
+    color: var(--text-primal);
+    line-height: 1em;
+}
+.contenido .contenido-caja h5{
+    position: relative;
+    font-family: 'Josefin Sans', sans-serif;
+    color: var(--light-blue-primal);
+    line-height: 1em;
+    text-align: right;
+}
+@media screen and (max-width:650px){
+    section:nth-child(1){
+        padding: 40px;
+        background: url(https://res.cloudinary.com/primalappsje/image/upload/v1650655400/primal/pexels-miguel-%C3%A1-padri%C3%B1%C3%A1n-2882566_djmftn.jpg);
+        background-size: cover;
+        background-position: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .contenido .contenido-caja h2{
+        position: relative;
+        text-align: center;
+        font-size: 60px;
+        color: var(--text-primal);
+        line-height: 1em;
+        z-index: 2;
+    }
+    .bg__section{
+        margin: auto;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.section-info{
+    background: #131313;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+    margin: 50px 0 50px 0;
+}
+
+.content-info img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    overflow: auto;
+    resize: both;
+}
+.content-info .content-text p{
+    color: #fff;
+    font-family: 'Vollkorn', sans-serif;
+    font-size: 1.5em;
+    text-align: justify;
+    margin: auto;
+    padding: 0 30px 130px 30px;
+}
+.content-info .content-text p i{
+    color: red;
+}
+@media screen and (max-width:650px){
+    .content-info .content-text p{
+        text-align: left;
+        font-size: 1.3em;
+        padding: 0 30px 130px 30px;
+    }
+}
+.header-section{
+    font-family: 'Josefin Sans', sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 90;
+}
+.header-section .logo{
+    position: relative;
+    font-size: 2em;
+    color: #fff;
+    text-transform: capitalize;
+    font-weight: 700;
+    text-decoration: none;
+    letter-spacing: 1px;
+}
+.header-section .navigation{
+    position: relative;
+    display: flex;
+}
+.header-section .navigation li{
+    list-style: none;
+}
+.header-section .navigation li a{
+    font-size: 1.15em;
+    display: inline-block;
+    color: #fff;
+    margin-right: 40px;
+    text-decoration: none;
+}
+.header-section .navigation li a:hover{
+    color: #03a9f4;
+}
+
+
+@media screen and (max-width:991px){
+    .header-section .navigation{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(15px);
+        z-index: 10;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;   
+    }
+    .header-section .navigation li a{
+        font-size: 24px;
+        margin: 10px 0;
+    }
+    .toggle__ {
+        position: fixed;
+        width: 50px;
+        height: 50px;
+        background: url(https://res.cloudinary.com/primalappsje/image/upload/v1649748390/primal/menu_tbc8b0.png);
+        background-size: 30px;
+        background-position: center;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        z-index: 11;
+        transition: all 300ms ease
+    }
+    
+    .toggle__:hover {
+        transform: scale(1.15);
+        transition: all 300ms ease
+    }
+    
+    .toggle__.active {
+        background: url(https://res.cloudinary.com/primalappsje/image/upload/v1649748390/primal/close_qx9tgy.png);
+        background-size: 25px;
+        background-position: center;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        z-index: 11
+    }
+    .navigation.active {
+        display: flex;
+        transition: all 600ms ease;
+    }
+}
+.container-profile{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    /*background: url(https://res.cloudinary.com/primalappsje/image/upload/v1650597152/primal/background-dark-cross-7_cfe9wx.jpg);
+    background-size: cover;
+    background-position: center;*/
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+    flex-wrap: wrap;
+}
+
+.button-index {
+    margin: 20px 0 0 0;
+    width: 100%;
+    justify-content: center;
+}
+
+.button-index button{
+    background-color: #ffcc74;
+    color: #000;
+    border: 2px solid transparent;
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 30px;
+    font-size: 17px;
+    font-weight: 700;
+    transition: .4s ease-in-out;
+    position: relative;
+}
+.button-index button:hover {
+    transform: scale(1.2);
+    background-color: transparent;
+    border: 2px solid #ffcc74;
+    color: #ffcc74;
+    transition: .4s ease;
+    cursor: pointer
+}
+
+.container-comments{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+
+}
+.container-comments .content-comment{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    align-content: center;
+    justify-content: center;
+    padding: 100px;
+}
+.container-comments .content-comment .card-comment{
+    position: relative;
+    width: 300px;
+    height: auto;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, .5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, .1);
+    border-top: 1px solid rgba(255, 255, 255, .5);
+    border-left: 1px solid rgba(255, 255, 255, .5);
+    backdrop-filter: blur(5px);
+    padding: 1rem;
+    color: #ddd;
+    margin: 25px;
+    text-align: center;
 }
