--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,11 +29,11 @@
 </head>
 <body>
 
-    {{!<--<div class="loader-wrapper">
+    {{!<div class="loader-wrapper">
         <div class="loader2" style="border-top-color: rgba(149, 144, 144, 0.46);"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
-    </div>-->}}
+    </div>}}
 
 
     {{> navigation}}
@@ -44,7 +44,6 @@
 
     {{> footer}}
     
-     <script type="module" src="/js/firebase-primal.js"></script>
     <script type="application/javascript" src="/js/preloader.js"></script>
     <script type="text/javascript" src="/js/menu.js"></script>
     <script type="text/javascript" src="/js/jarallax.js"></script>
@@ -101,7 +100,7 @@
     <script>
         function toggleMenu__() {
             const menutoggle = document.querySelector(".toggle__");
-            const sidebar__ = document.querySelector(".sidebar__");
+            const sidebar__ = document.querySelector(".navigation");
             menutoggle.classList.toggle("active")
             sidebar__.classList.toggle("active")
         }
