--- a/src/views/links/edit.hbs
+++ b/src/views/links/edit.hbs
@@ -1,17 +1,16 @@
-<div class="container p-4">
-    <div class="row">
-        <div class="col-md-4 mx-auto my-5">
-            <div class="card">
-                <div class="card-body">
-                    <form action="/links/edit/{{link.id}}" method="POST" >
+
+<div class="container-profile">
+    <div class="contenido">
+            <div class="contenido-caja">
+                <form action="/comments/edit/{{link.id}}" method="POST" >
                         <div class="form-group">
-                            <input type="text" value="{{link.tittle}}" class="form-control" name="tittle" id="" placeholder="Tittle" autofocus>
+                            <input type="text" value="{{link.tittle}}" class="form-control" name="tittle" id="" placeholder="De" autofocus>
                         </div>
                         <div class="form-group">
-                            <input type="url" value="{{link.url}}" name="url" class="form-control" id="" placeholder="Url">
+                            <input type="text" value="{{link.url}}" name="url" class="form-control" id="" placeholder="Asunto">
                         </div>
                         <div class="form-group">
-                            <textarea name="description" id="" cols="0" rows="2" class="form-control" placeholder="Description">{{link.description}}</textarea>
+                            <textarea name="description" id="" cols="0" rows="2" class="form-control" placeholder="Comentario">{{link.description}}</textarea>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-success btn-block">
@@ -19,8 +18,6 @@
                             </button>
                         </div>
                     </form>
-                </div>
-            </div>  
+            </div>
         </div>
-    </div>
 </div>
