--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -1,28 +1,22 @@
-<div class="container p-4">
-    <div class="row">
-        {{#each links}}
-            <div class="col-md-3">
-                <div class="card text-center">
-                    <div class="card-body text-dark">
-                        <a href="{{url}}" target="__blank">
+<div class="container-comments">    
+    <div class="content-comment">
+        
+            {{#each links}}
+            <div class="card-comment skill__box">
                             <h3 class="card-title text-uppercase">
                                 {{tittle}}
                             </h3>
-                        </a>
                         <p class="m-2">{{description}}</p>
-                        <p class="text-dark">{{timeago created_at}}</p>
-                        <a href="/links/delete/{{id}}" class="btn btn-danger">Delete link</a>
-                        <a href="/links/edit/{{id}}" class="btn btn-secondary">Edit</a>
-                    </div>
-                </div>
-            </div>
-        {{else}}
-            <div class="col-md-4 mx-auto">
+                        <p>{{timeago created_at}}</p>
+                        <a href="/comments/delete/{{id}}" class="btn btn-danger">Borrar comentario</a>
+                        <a href="/comments/edit/{{id}}" class="btn btn-secondary">Editar</a>
+</div>
+                {{else}}
                 <div class="card card-body text-center">
-                    <p class="text-dark">There are not links saved yet.</p>
-                    <a href="/links/add" class="text-dark">Create one!</a>
+                    <p class="text-dark">No hay comentarios guardados</p>
+                    <a href="/comments/add" class="text-dark">Crear uno</a>
                 </div>
-            </div>
-        {{/each}}
+                {{/each}}
+        
     </div>
 </div>
