--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,11 +1,10 @@
 {{#if message}}
-        <div class="container">
+        <div class="container mt-4">
             <div class="row">
                 <div class="col-md-4 mx-auto">
                     <div class="alert alert-danger alert-dismissible fade show" role="alert">
                         {{message}}
                         <button type="button" class="btn-close btn-close-dark" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                 </div>
@@ -13,13 +12,12 @@
         </div>
     {{/if}}
 {{#if success}}
-        <div class="container">
+        <div class="container mt-4">
             <div class="row">
                 <div class="col-md-4 mx-auto">
                     <div class="alert alert-success alert-dismissible fade show" role="alert">
                         {{success}}
                         <button type="button" class="btn-close btn-close-dark" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                 </div>
