--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,81 +1,31 @@
-{{#if user}}
-<section onclick="toggleMenu__();">
-    <div class="toggle__" style="margin-top: 40px;right: 40px;"></div>
-    <div class="sidebar__">
-        <ul class="sidebar__menu">
-            <li style="--clr:#ff0029">
-                <a data-text="&nbsp;home" href="/home" class="font__Josefin">
-                    &nbsp;Home&nbsp;
-                </a>
-            </li>
-            <li style="--clr:#ff0019">
-                <a data-text="&nbsp;skills" href="#skills" class="btn_open_skills font__Josefin"
-                    onclick="toggleMenu__skills();">
-                    &nbsp;Skills&nbsp;
-                </a>
-            </li>
-            <li style="--clr:#ff0009">
-                <a data-text="&nbsp;proyectos" href="projects" class="font__Josefin">
-                    &nbsp;Proyectos&nbsp;
-                </a>
-            </li>
-            <li style="--clr:#D31027">
-                <a data-text="&nbsp;contacto" href="#contact" class="font__Josefin">
-                    &nbsp;Contacto&nbsp;
-                </a>
-            </li>
-            <li style="--clr:#dd1818">
-                <a data-text="&nbsp;About" href="#about" class="font__Josefin">
-                    &nbsp;About&nbsp;
-                </a>
-            </li>
-        </ul>
-    </div>
-</section>
-{{/if}}
-<nav id="navbar_move" class="navbar navbar-expand-lg fixed-top" style="z-index: 3;">
-    <div class="container px-4">
-        <a class="navbar-brand" href="/">
-            <div class="col-sm-6">
-                <img class="logo__hover" src="/img/PrimalLogoLight48x48.png" alt="Primal Logo">
-                <h5 class="d-inline-block">
-                    <div class="text-light rounded-0 ms-2 title__style__LS">Primal</div>
-                </h5>
-                <h6 class="d-inline-block">
-                    <span class="badge text-dark ms-2"
-                        title="Beta basicamente quiere decir que este sitio se caerá, y muchisimo. ademas que estara algo lento probablemente algunas veces"
-                        style="border-radius: 10px; background: #ffcc74;">Beta</span>
-                </h6>
-            </div>
-        </a>
-    </div>
-
-  <div class="container-fluid">
-      
-      <ul class="navbar-nav">
-          {{#if user}}
+<header class="header-section">
+    <a href="/" class="logo">Primal</a>
+    {{#if user}}
+    <div class="toggle__" style="top: 30px; right:30px; z-index:11;" onclick="toggleMenu__();"></div>
+    <ul class="navigation">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Links
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="/links">All links</a></li>
-            <li><a class="dropdown-item" href="/links/add">Add new link</a></li>
-          </ul>
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Comentarios
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item text-dark" href="/comments">Todos los comentarios</a></li>
+                <li><a class="dropdown-item text-dark" href="/comments/add">Agregar comentario público</a></li>
+            </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+            <a class="nav-link" href="/profile">Perfil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Log out</a>
+            <a class="nav-link" href="/logout">Log out</a>
         </li>
         {{else}}
-            <li class="nav-item">
-                <a href="/login">Login</a>
-            </li>
+        <li class="nav-item" style="list-style: none;">
+            <a href="/login" style="display: inline-block;
+            color: #fff;
+            margin-right: 40px;
+            text-decoration: none;">Login</a>
+        </li>
         {{/if}}
-      </ul>
-
-  </div>
-
-</nav>
+    </ul>
+</header>
