--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,11 +1,9 @@
-<div class="container p-4">
-    <div class="row">
-        <div class="col-md-4 mx-auto">
-            <div class="card-body">
-                <h3 class="text-light">Welcome {{user.fullname}}</h3>
-                <h4>{{user.username}}</h4>
-                <a href="/links" class="btn btn-primary m-4">Save your link</a>
+<div class="container-profile">
+    <div class="contenido">
+            <div class="contenido-caja">
+                <h3 class="text-light">Bienvenido {{user.fullname}}</h3>
+                <h4 class="text-light">{{user.username}}</h4>
+                <a href="/comments/add" class="btn btn-primary m-4">Agrega un comentario público</a>
             </div>
         </div>
-    </div>
 </div>
