cambios-front-end

--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -13,22 +13,22 @@
         <div class="formBx">
             <div class="form signinForm">
                 <form action="/signin" method="POST">
-                    <h3>Sign in</h3>
-                    <input type="text" name="username" placeholder="Username">
-                    <input type="password" name="password" id="" placeholder="Password">
-                    <button class="btn btn-success btn-block" name="" id="">Login</button>
-                    <a href="" class="forgot">Forgot Password?</a>
+                    <h3>Iniciar sesión</h3>
+                    <input type="text" name="username" placeholder="Nombre de usuario">
+                    <input type="password" name="password" id="" placeholder="Contraseña">
+                    <button class="btn btn-success btn-block" name="" id="">Iniciar sesión</button>
+                    {{!<a href="" class="forgot">Forgot Password?</a>}}
                 </form>
             </div>
             <div class="form signupForm">
                 <form action="/signup" method="POST">
-                    <h3>Sign up</h3>
-                    <input type="text" name="username" placeholder="Username" autofocus>
-                    <input type="text" name="fullname" placeholder="Full name">
-                    <input type="text" name="email" placeholder="Email Address">
-                    <input type="password" name="password" id="" placeholder="Password">
+                    <h3>Registrarse</h3>
+                    <input type="text" name="username" placeholder="Nombre de usuario" autofocus>
+                    <input type="text" name="fullname" placeholder="Nombre completo">
+                    <input type="text" name="email" placeholder="Correo elctrónico">
+                    <input type="password" name="password" id="" placeholder="Contraseña">
                     {{!<--<input type="password" name="" id="" placeholder="Confirm Password">-->}}
-                    <button class="btn btn-success btn-block" name="" id="">Register</button>
+                    <button class="btn btn-success btn-block" name="" id="">Registrarse</button>
                 </form>
             </div>
         </div>
