--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -19,6 +19,7 @@ html {
     --deep-blue-primal: #21477E;
     --text-primal:#ffcc74;
     --red-origin-button:#ff1f71;
+    --real-deep-blue:#0e1538;
 }
 
 .navbar {
@@ -1023,7 +1024,8 @@ section:nth-child(1){
     
 }
 .contenido{
-    max-width: 600px;
+    max-width: 100%;
+    height: 100%;
 }
 .contenido .contenido-caja h2{
     position: relative;
@@ -1196,13 +1198,28 @@ section:nth-child(1){
     position: relative;
     width: 100%;
     min-height: 100vh;
-    /*background: url(https://res.cloudinary.com/primalappsje/image/upload/v1650597152/primal/background-dark-cross-7_cfe9wx.jpg);
-    background-size: cover;
-    background-position: center;*/
     display: flex;
     justify-content: center;
-    padding: 100px;
+    padding-top: 100px;
     flex-wrap: wrap;
+    background: #00ccff;
+}
+.contenido-add{
+    max-width: 100%;
+    height: 100%;
+    background: #00ccff;
+}
+.form-input{
+    position: relative;
+    width: 320px;
+    height: auto;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .5);
+    margin: 25px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.form-input button{
+    width: 100%;
 }
 
 .button-index {
@@ -1236,8 +1253,8 @@ section:nth-child(1){
     width: 100%;
     min-height: 100vh;
     display: flex;
-
-}
+    background: var(--real-deep-blue);
+}   
 .container-comments .content-comment{
     display: flex;
     flex-wrap: wrap;
@@ -1249,20 +1266,56 @@ section:nth-child(1){
     transform: translate(-50%, 0);
     align-content: center;
     justify-content: center;
-    padding: 100px;
+    padding-top: 100px;
 }
 .container-comments .content-comment .card-comment{
     position: relative;
     width: 300px;
     height: auto;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .5);
+    /*box-shadow: 20px 20px 50px rgba(0, 0, 0, .5);
     border-radius: 15px;
     background: rgba(255, 255, 255, .1);
     border-top: 1px solid rgba(255, 255, 255, .5);
     border-left: 1px solid rgba(255, 255, 255, .5);
-    backdrop-filter: blur(5px);
-    padding: 1rem;
-    color: #ddd;
+    backdrop-filter: blur(5px);*/
     margin: 25px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.container-comments .content-comment .card-comment .text-comments{
+    position: relative;
+    padding: 1rem;
+    width: 100%;
+    height: auto;
+    color: #ddd;
     text-align: center;
+    z-index: 10;
+    margin: 15px 0 15px 0;
+}
+
+.container-comments .content-comment .card-comment:before{
+    content: '';
+    position: absolute;
+    width: 150px;
+    height: 250%;
+    top: 50%;
+    left: 50%;
+    background: linear-gradient(#00ccff, #d400d4);
+    animation: animate-comments 10s linear infinite;
+}
+.container-comments .content-comment .card-comment:after{
+    content: '';
+    position: absolute;
+    background: var(--real-deep-blue);
+    inset: 4px;
+    border-radius: 16px;
+}
+@keyframes animate-comments{
+    0%{
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
