--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -1,20 +1,20 @@
 
 <div class="container-profile">
-    <div class="contenido">
-            <div class="contenido-caja">
+    <div class="contenido-add">
+            <div class="contenido-add-box">
                 <form action="/comments/add" method="POST" >
-                        <div class="form-group">
+                        <div class="form-input">
                             <input type="text" class="form-control" name="tittle" id="" placeholder="De" autofocus>
                         </div>
-                        <div class="form-group">
+                        <div class="form-input">
                             <input type="text" name="url" class="form-control" id="" placeholder="Asunto">
                         </div>
-                        <div class="form-group">
+                        <div class="form-input">
                             <textarea name="description" id="" cols="0" rows="2" class="form-control" placeholder="Comentario"></textarea>
                         </div>
-                        <div class="form-group">
+                        <div class="form-input">
                             <button class="btn btn-success btn-block">
-                                Save
+                                Guardar
                             </button>
                         </div>
                     </form>
